# Lab_3_Python

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
source/: tasks.jsonl
src/adapter/: cli.py
src/domain/: descriptors.py  exceptions.py  protocols.py  task.py  task_queue.py
src/logger/: logger.py
src/repository/: task_api.py  task_file.py  task_generator.py  task_storage.py
src/usecases/: task_handlers.py  task_interact.py
test/: test_domain.py  test_domain_repository.py  test_repository.py  test_usecases.py
