[project]
name = "task-manager"
version = "0.1.0"
dependencies = [
    "typer>=0.9.0",
    "questionary>=2.0.0",
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "questionary>=2.1.1",
    "ruff>=0.15.5",
    "typer>=0.24.1",
]

[tool.ruff]
line-length = 79
target-version = 'py312'

[tool.ruff.lint]
fixable = ['ALL']
select = ['E', 'F', 'I', 'B', 'Q']
ignore = ['E101']

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.mypy]
python_version = '3.12'
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.coverage.run]
source = ["src"]
omit = [
    "src/adapter/cli.py",
    "*/*/__init__.py"
]
